# charm-research

./: .gitignore  README.md  pyproject.toml
notebooks/: options-liquidity.ipynb  options.py
scripts/: calc_alpha_fees.py  calc_alpha_fees2.py  calc_initial_sizes.py  calc_lmsr.py
stats/: fetch_market_stats.py
