[tool.poetry]
name = "charm-research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
seaborn = "^0.11.0"
eth-brownie = "^1.13.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
